Dev-RBI/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Subtype__c</fullName>
        <label>Account Subtype</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Date__c</fullName>
        <label>Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Billing_Address__c</fullName>
        <formula>BillingStreet &amp; &quot;,&quot; &amp; BillingCity  &amp; &quot;,&quot; &amp;  BillingState &amp; &quot;,&quot; &amp;  BillingPostalCode &amp; &quot;,&quot; &amp;  BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <label>Constitution</label>
        <picklist>
            <picklistValues>
                <fullName>Public Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pvt Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Validity_in_Months__c</fullName>
        <formula>IF( ISNULL(Current_Contract_End_Date__c) || ISNULL(Current_Contract_Start_Date__c), 0,
 ((YEAR( Current_Contract_End_Date__c ) - YEAR(Current_Contract_Start_Date__c)) *12) + (MONTH(
 Current_Contract_End_Date__c ) - MONTH(Current_Contract_Start_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Validity (in Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Contract_End_Date__c</fullName>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Start_Date__c</fullName>
        <label>Current Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Export_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine whether the customer can export projects</description>
        <label>Export Projects?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTR_Pricing__c</fullName>
        <description>This field is used only for Customer Record Type</description>
        <label>FTR Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Background_of_promoters__c</fullName>
        <description>Capture General Background of promoters.</description>
        <label>General Background of promoters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Banks_Financing_on_the_project__c</fullName>
        <label>Other Banks Financing on the project</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PAS_Pricing__c</fullName>
        <description>This field is used only for Customer Record Type</description>
        <label>PAS Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMS_Pricing__c</fullName>
        <description>This field is used only for Customer Record Type</description>
        <label>PMS Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_per_report__c</fullName>
        <description>This field is only for Legal Agency and DVU Record Types</description>
        <label>Pricing per report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Monitoring_Frequency__c</fullName>
        <label>Project Monitoring Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantum_In_Crs__c</fullName>
        <label>Quantum (In Crs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_market_Feedback__c</fullName>
        <description>Capture Remarks / market Feedback of the Developer.</description>
        <label>Remarks / market Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Weights__c</fullName>
        <formula>Weightage_Basement__c  +  Weightage_Electrification_Sanitation__c  +   Weightage_Excavaton_of_Footings__c  +  Weightage_Finishing__c  +  Weightage_Masonary__c  +  Weightage_RCC_Slab_Casting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weights</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNIT_RPT_GEN_Pricing__c</fullName>
        <description>This field is used only for Customer Record Type</description>
        <label>Unit Report Generation Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Used for (Developer)duplicate check in trigger.</description>
        <formula>LOWER( Name &amp; BillingCity)</formula>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weightage_Basement__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Weightage - Basement (Footings, Retaining Walls and Water Proofing)</description>
        <inlineHelpText>Weightage - Basement (Footings, Retaining Walls and Water Proofing)</inlineHelpText>
        <label>Weightage - Basement(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Electrification_Sanitation__c</fullName>
        <defaultValue>0.075</defaultValue>
        <label>Weightage-Electrification &amp; Sanitation %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Excavaton_of_Footings__c</fullName>
        <defaultValue>0.3</defaultValue>
        <label>Weightage - Excavaton of Footings(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Finishing__c</fullName>
        <defaultValue>0.075</defaultValue>
        <description>Weightage for Finishing (titles, Doors, QC)</description>
        <inlineHelpText>Weightage for Finishing (titles, Doors, QC)</inlineHelpText>
        <label>Weightage - Finishing(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Masonary__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Weightage for Masonary (Brickwork, Doors and Window Frames)</description>
        <inlineHelpText>Weightage for Masonary ( Brickwork, Doors and Window Frames)</inlineHelpText>
        <label>Weightage - Masonary(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_RCC_Slab_Casting__c</fullName>
        <defaultValue>0.45</defaultValue>
        <label>Weightage - RCC Slab Casting (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Developer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Developer</value>
        </filters>
        <label>All Developer</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <namedFilters>
        <fullName>Account_00N900000059WVGEA2</fullName>
        <active>true</active>
        <field>Account.Legal_Agency__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legal Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Legal Agency</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000kCSBEA2_00N90000005Ab7VEAS</fullName>
        <active>true</active>
        <field>Visit__c.Legal_Agency__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legal Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Visit_Legal Agency</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000nrfYEAQ_00N90000004wcmmEAA</fullName>
        <active>true</active>
        <field>Project__c.Developer_Id__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Developer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project_Developer Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000nrfYEAQ_00N90000004wdMCEAY</fullName>
        <active>true</active>
        <field>Project__c.Architect_Id__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Architect, Architect</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project_Architect Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000D6Q9MAK_00NO0000000gxBSMAY</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Customer_Projects__c.AccountId__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>RBI</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Customer Project_Customer Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000D6QCMA0_00NO0000000gxEEMAY</fullName>
        <active>true</active>
        <field>List_of_Values__c.Customer__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>List of Values_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000D6QCMA0_00NO0000000gxEHMAY</fullName>
        <active>true</active>
        <field>List_of_Values__c.Developer__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Developer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>List of Values_Developer</name>
    </namedFilters>
    <recordTypes>
        <fullName>Architect</fullName>
        <active>true</active>
        <label>Architect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>DVU_Agency</fullName>
        <active>true</active>
        <label>DVU Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Developer</fullName>
        <active>true</active>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Agency</fullName>
        <active>true</active>
        <label>Legal Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>RBI</fullName>
        <active>true</active>
        <label>Realty BI</label>
    </recordTypes>
    <validationRules>
        <fullName>RBI_Account_Validation_rule</fullName>
        <active>true</active>
        <description>Used to prevent editing RBI record type by non system adminstrators</description>
        <errorConditionFormula>AND( 
	OR(ISCHANGED( Weightage_RCC_Slab_Casting__c ),ISCHANGED( Weightage_Masonary__c ),
	   ISCHANGED( Weightage_Finishing__c ),ISCHANGED( Weightage_Excavaton_of_Footings__c ),
     	   ISCHANGED( Weightage_Electrification_Sanitation__c ),ISCHANGED( Weightage_Basement__c )
     	 ), RecordType.DeveloperName =&quot;RBI&quot;, $Profile.Name&lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
        <errorMessage>You are authorised to modify the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weights_Rule</fullName>
        <active>true</active>
        <description>Sum of weights should not be greater than 100</description>
        <errorConditionFormula>Total_Weights__c  &gt; 1.00</errorConditionFormula>
        <errorMessage>Sum of weights should not be greater than 100</errorMessage>
    </validationRules>
</CustomObject>